--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
   <title>Vanilla JavaScript App</title>
 </head>
 
-<body>
+<body>j
   <main>
     <h1>Vanilla JavaScript App</h1>
+    <p>Loading content from the API: <b id="name">...</b></p>
   </main>
+
+  <script>
+    (async function() {
+      let { text } = await( await fetch(`/api/message`)).json();
+      document.querySelector('#name').textContent = text;
+    }())
+  </script>
 </body>
 
 </html>
